feat: [EDDY] Setup Backend config for deployment on Railway